--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> Helios<strong></strong></a> </div>
+      <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> Sécurité du Cloud<strong></strong></a> </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -62,9 +62,9 @@
 <!-- Header -->
 <header class="text-center" name="home">
   <div class="intro-text">
-    <h1>Welcome to <strong>Helios</strong></h1>
-    <p>We are a full-service integrated creative agency</p>
-    <a href="#services-section" class="btn btn-default btn-lg page-scroll">LEARN MORE</a> </div>
+    <h1>Bienvenue sur le site <strong>sécurité du Cloud</strong></h1>
+    <p>Ce site est dédié au projet de veille technologique pour l'option informatique de l'école Centrale de Lyon de Paola de Perthuis. </p>
+    <a href="#services-section" class="btn btn-default btn-lg page-scroll">EN SAVOIR PLUS</a> </div>
 </header>
 
 <!-- Services Section -->
