--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <!-- Header -->
 <header class="text-center" name="home">
   <div class="intro-text">
-    <h1>Bienvenue sur le site <strong>sécurité du Cloud</strong></h1>
-    <p>Ce site est dédié au projet de veille technologique pour l'option informatique de l'école Centrale de Lyon de Paola de Perthuis. </p>
+    <h1><strong>sécurité</strong> du traitement de données sur le <strong>Cloud</strong></h1>
+    <p>Projet de veille technologique de Paola de Perthuis</p>
     <a href="#services-section" class="btn btn-default btn-lg page-scroll">EN SAVOIR PLUS</a> </div>
 </header>
 
