--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home" class="page-scroll">Home</a></li>
-        <li><a href="#services-section" class="page-scroll">Services</a></li>
-        <li><a href="#works-section" class="page-scroll">Portfolio</a></li>
-        <li><a href="#about-section" class="page-scroll">About</a></li>
-        <li><a href="#team-section" class="page-scroll">Team</a></li>
+        <li><a href="#home" class="page-scroll">Accueil</a></li>
+        <li><a href="#services-section" class="page-scroll">Introduction</a></li>
+        <li><a href="#works-section" class="page-scroll">Vulnérabilités</a></li>
+        <li><a href="#works-section" class="page-scroll">GAZELLE</a></li>
+        <li><a href="#about-section" class="page-scroll">à propos</a></li>
+        <li><a href="#team-section" class="page-scroll">Auteure</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
       </ul>
     </div>
