--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <!-- Header -->
 <header class="text-center" name="home">
   <div class="intro-text">
-    <h1><strong>sécurité</strong> du traitement de données sur le <strong>Cloud</strong></h1>
+    <h1><strong>Cloud & sécurité</strong> du traitement de données</h1>
     <p>Projet de veille technologique de Paola de Perthuis</p>
     <a href="#services-section" class="btn btn-default btn-lg page-scroll">EN SAVOIR PLUS</a> </div>
 </header>
