ajout texte intro

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Accueil</a></li>
-        <li><a href="#services-section" class="page-scroll">Introduction</a></li>
+        <li><a href="#intro-section" class="page-scroll">Introduction</a></li>
         <li><a href="#works-section" class="page-scroll">Vulnérabilités</a></li>
-        <li><a href="#works-section" class="page-scroll">GAZELLE</a></li>
+        <li><a href="#gazelle-section" class="page-scroll">GAZELLE</a></li>
         <li><a href="#about-section" class="page-scroll">à propos</a></li>
-        <li><a href="#team-section" class="page-scroll">Auteure</a></li>
+        <li><a href="#team-section" class="page-scroll">Références</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -68,16 +68,19 @@
     <a href="#services-section" class="btn btn-default btn-lg page-scroll">EN SAVOIR PLUS</a> </div>
 </header>
 
-<!-- Services Section -->
-<div id="services-section" class="text-center">
+<!-- Intro Section -->
+<div id="intro-section" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Our Services</h2>
+      <h2>Pourquoi le traitement de données sur le Cloud pose problème</h2>
       <hr>
       <div class="clearfix"></div>
-      <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus. Eleifend pellentesque natoque faucibus magna ut etiam.</p>
+      <p>Dans le contexte actuel de boom de l'utilisation du Cloud et du traitement de données par machine learning, les préoccupation sur la sécurisation des masses de données sont d'actualité.</p>
     </div>
     <div class="space"></div>
+    <div class="row">
+      
+    </div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
         <h4>Web Design</h4>
@@ -96,6 +99,7 @@
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
       </div>
     </div>
+
   </div>
 </div>
 <!-- Portfolio Section -->
