--- a/index.html
+++ b/index.html
@@ -72,14 +72,24 @@
 <div id="intro-section" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Pourquoi le traitement de données sur le Cloud pose problème</h2>
+      <h2>Pourquoi le traitement de données dans le Cloud pose problème</h2>
       <hr>
       <div class="clearfix"></div>
       <p>Dans le contexte actuel de boom de l'utilisation du Cloud et du traitement de données par machine learning, les préoccupation sur la sécurisation des masses de données sont d'actualité.</p>
     </div>
     <div class="space"></div>
     <div class="row">
-      
+      <div class="col-md-6">
+        <div class="about-text">
+          <h4>Avantages du Cloud</h4>
+          <p>Le Cloud permet une forte variation des ressources à disposition, et d'en utiliser ponctuellement beaucoup, notamment dans les applications traitant de grosses masses de données par machine learning.</p>
+          <h4>Utilisation en hausse</h4>
+          <p>Les graphes ci-contre illustrent l'évolution de l'utilisation du Cloud dans les dernières années.</p>
+          <h4>Why Choose Us</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+        </div>
+      </div>
+      <div class="col-md-6"> <img src="img/intro/microsoft_cloud.png" class="img-responsive"> </div>
     </div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
