--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="intro-text">
     <h1><strong>Cloud & sécurité</strong> du traitement de données</h1>
     <p>Projet de veille technologique de Paola de Perthuis</p>
-    <a href="#services-section" class="btn btn-default btn-lg page-scroll">EN SAVOIR PLUS</a> </div>
+    <a href="#intro-section" class="btn btn-default btn-lg page-scroll">EN SAVOIR PLUS</a> </div>
 </header>
 
 <!-- Intro Section -->
@@ -89,7 +89,11 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
         </div>
       </div>
-      <div class="col-md-6"> <img src="img/intro/microsoft_cloud.png" class="img-responsive"> </div>
+      <div class="col-md-6">
+        <img src="img/intro/microsoft_cloud.png" class="img-responsive">
+        <img src="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" class="img-responsive">
+        <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive">
+      </div>
     </div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
