--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 web">
-        <img src="img/intro/microsoft_cloud.png" class="img-responsive">
-        <img src="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" class="img-responsive">
-        <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive">
+      <div class="col-sm-6 col-md-5 col-lg-3 web">
+        <div class="hover-bg">
+          <img src="img/intro/microsoft_cloud.png" class="img-responsive">
+          <img src="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" class="img-responsive">
+          <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive">
+        </div>
       </div>
     </div>
     <div class="row">
