--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
       </div>
       <div class="col-sm-6 col-md-3 col-lg-4 web">
         <div class="hover-bg">
-          <img src="img/intro/microsoft_cloud.png" class="img-responsive">
+          <a href="img/portfolio/microsoft_cloud.png" rel="prettyPhoto" />
+          <a href="img/portfolio/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" rel="prettyPhoto" />
+          <a href="img/portfolio/growth-of-cloud-computing.jpg" rel="prettyPhoto" />
+          <!-- <img src="img/intro/microsoft_cloud.png" class="img-responsive">
           <img src="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" class="img-responsive">
-          <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive">
+          <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive"> -->
         </div>
       </div>
     </div>
