--- a/index.html
+++ b/index.html
@@ -94,9 +94,17 @@
           <a href="img/portfolio/microsoft_cloud.png" rel="prettyPhoto">
             <img src="img/intro/microsoft_cloud.png" class="img-responsive">
           </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-4 web">
+        <div class="hover-bg">
           <a href="img/portfolio/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" rel="prettyPhoto">
             <img src="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" class="img-responsive">
           </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-4 web">
+        <div class="hover-bg">
           <a href="img/portfolio/growth-of-cloud-computing.jpg" rel="prettyPhoto">
             <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive">
           </a>
