ajout dangers du cloud

--- a/index.html
+++ b/index.html
@@ -85,32 +85,47 @@
           <p>Le Cloud permet une forte variation des ressources à disposition, et d'en utiliser ponctuellement beaucoup, notamment dans les applications traitant de grosses masses de données par machine learning.</p>
           <h4>Utilisation en hausse</h4>
           <p>Les graphes ci-contre illustrent l'évolution de l'utilisation du Cloud dans les dernières années.</p>
-          <h4>Why Choose Us</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-        </div>
+          </div>
       </div>
       <div class="col-sm-6 col-md-3 col-lg-9 web">
         <div class="col-sm-6 col-md-3 col-lg-6 web">
           <div class="hover-bg">
-            <a href="img/portfolio/microsoft_cloud.png" rel="prettyPhoto">
+            <a href="img/intro/microsoft_cloud.png" rel="prettyPhoto">
               <img src="img/intro/microsoft_cloud.png" class="img-responsive">
             </a>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-6 web">
           <div class="hover-bg">
-            <a href="img/portfolio/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" rel="prettyPhoto">
+            <a href="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" rel="prettyPhoto">
               <img src="img/intro/IDC-Spending-Forecast-for-IT-Infrastructure-1.jpg" class="img-responsive">
             </a>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-7 web">
+        <div class="col-sm-6 col-md-3 col-lg-8 web">
           <div class="hover-bg">
-            <a href="img/portfolio/growth-of-cloud-computing.jpg" rel="prettyPhoto">
+            <a href="img/intro/growth-of-cloud-computing.jpg" rel="prettyPhoto">
               <img src="img/intro/growth-of-cloud-computing.jpg" class="img-responsive">
             </a>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-sm-6 col-md-3 col-lg-8 web">
+          <div class="hover-bg">
+            <a href="img/intro/risques_cloud.png" rel="prettyPhoto">
+              <img src="img/intro/risques_cloud.png" class="img-responsive">
+            </a>
+          </div>
+      </div>
+      <div class="col-md-4">
+        <div class="about-text">
+          <h4>Quelles sont les dangers?</h4>
+          <p>Des vulnérabilités peuvent se présenter à de nombreux niveaux : software, hardware, attaque externe, accaparement d'identifiants, lecture par d'autres utlisateurs dans le cadre de serveurs partagés, ou même par le fournisseur.</p>
+          <p>Ci-contre, les risques en fonction du type d'attaque, d'après un sondage sur <a href="https://cloud-computing.developpez.com/actu/97105/Quels-sont-les-risques-de-securite-majeurs-du-cloud-computing-Une-etude-du-CSA-en-revele-douze/">cloud-computing.developpez.com</a>.</p>
+          </div>
       </div>
     </div>
     <div class="row">
