--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <div id="intro-section" class="text-center">
   <div class="container">
     <div class="section-title center">
+      <div class="space"></div>
       <h2>Pourquoi le traitement de données dans le Cloud pose problème</h2>
       <hr>
       <div class="clearfix"></div>
