--- a/index.html
+++ b/index.html
@@ -126,13 +126,15 @@
           <h4>Quelles sont les dangers?</h4>
           <p>Des vulnérabilités peuvent se présenter à de nombreux niveaux : software, hardware, attaque externe, accaparement d'identifiants, lecture par d'autres utlisateurs dans le cadre de serveurs partagés, ou même par le fournisseur.</p>
           <p>Ci-contre, les risques en fonction du type d'attaque, d'après un sondage sur <a href="https://cloud-computing.developpez.com/actu/97105/Quels-sont-les-risques-de-securite-majeurs-du-cloud-computing-Une-etude-du-CSA-en-revele-douze/">cloud-computing.developpez.com</a>.</p>
-          <h4>Usurpation d'identifiants & d'accès</h4>
-          <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler. L'usurpation d'accès contitue également une faille classique.</p>
           </div>
       </div>
     </div>
     <div class="space"></div>
     <div class="row">
+      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
+        <h4>Usurpation d'identifiants & d'accès</h4>
+        <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler. L'usurpation d'accès contitue également une faille classique.</p>
+      </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
         <h4>Interfaces graphiques et API</h4>
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
