--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
     </div>
     <div class="space"></div>
     <div class="row">
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Usurpation d'identifiants & d'accès</h4>
         <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler. L'usurpation d'accès contitue également une faille classique.</p>
       </div>
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Interfaces graphiques et API</h4>
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
       </div>
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-gears"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-gears"></i>
         <h4>Endpoints</h4>
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
       </div>
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-rocket"></i>
         <h4>Denial-of-Service</h4>
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
       </div>
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-line-chart"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-line-chart"></i>
         <h4>Firewalls</h4>
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
       </div>
