--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
     <div class="row">
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Usurpation d'identifiants & d'accès</h4>
-        <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler. L'usurpation d'accès contitue également une faille classique.</p>
+        <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler.</p>
+        <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Interfaces graphiques et API</h4>
