--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@
         <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
-        <h4>Interfaces graphiques et API</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <h4>Services et API</h4>
+        <p>Les API et services liés à l'utilisation d'une application dans le Cloud présentent un point d'entrée applicatif sur les serveurs distants, fragile car il faut tester toutes les injections dans les applications, et ils présentent chacun un système de chiffrement et d'authentification propre.</p>
+      </div>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+        <h4>Interfaces graphiques</h4>
+        <p></p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-gears"></i>
         <h4>Endpoints</h4>
