--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="about-text">
           <h4>Quelles sont les dangers?</h4>
           <p>Des vulnérabilités peuvent se présenter à de nombreux niveaux : software, hardware, attaque externe, accaparement d'identifiants, lecture par d'autres utlisateurs dans le cadre de serveurs partagés, ou même par le fournisseur.</p>
-          <p>Ci-contre, les risques en fonction du type d'attaque, d'après un sondage sur <a href="https://cloud-computing.developpez.com/actu/97105/Quels-sont-les-risques-de-securite-majeurs-du-cloud-computing-Une-etude-du-CSA-en-revele-douze/">cloud-computing.developpez.com</a>.</p>
+          <p>Ci-contre, les risques perçus en fonction du type d'attaque, d'après un sondage sur <a href="https://cloud-computing.developpez.com/actu/97105/Quels-sont-les-risques-de-securite-majeurs-du-cloud-computing-Une-etude-du-CSA-en-revele-douze/">cloud-computing.developpez.com</a>.</p>
           </div>
       </div>
     </div>
@@ -137,16 +137,12 @@
         <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
-        <h4>Services et API</h4>
-        <p>Les API et services liés à l'utilisation d'une application dans le Cloud présentent un point d'entrée applicatif sur les serveurs distants, fragile car il faut tester toutes les injections dans les applications, et ils présentent chacun un système de chiffrement et d'authentification propre.</p>
-      </div>
-      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
-        <h4>Interfaces graphiques</h4>
-        <p></p>
+        <h4>Interfaces et API</h4>
+        <p>Les interfaces utilisateurs et API du Cloud consituent la seule partie applicative accessible depuis des adresses IP extérieures et seront donc particulitèrement visées par les attaques sur le Cloud.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-gears"></i>
         <h4>Endpoints</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
+        <p>De même, il faut sécuriser tous les points d'accès au Cloud de manière à ce qu'aucun individu extérieur ne puisse y accéder, par exemple en demandant l'utilisation d'un VPN.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-rocket"></i>
         <h4>Denial-of-Service</h4>
