--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-rocket"></i>
         <h4>Denial-of-Service</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <p>Ces attaques arrivent lorsqu'un agent extérieur mal-intentionné surcharge le système de demandes jusqu'à ce que celui-ci cesse de répondre sous la charge. Ce ne sont pas les attaques les plus fréquentes, mais elles sont en hausse sur les hébergeurs de Cloud.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-line-chart"></i>
         <h4>Firewalls</h4>
