--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-rocket"></i>
         <h4>Denial-of-Service</h4>
-        <p>Ces attaques arrivent lorsqu'un agent extérieur mal-intentionné surcharge le système de demandes jusqu'à ce que celui-ci cesse de répondre sous la charge. Ce ne sont pas les attaques les plus fréquentes, mais elles sont en hausse sur les hébergeurs de Cloud.</p>
+        <p>Ces attaques arrivent lorsqu'un agent extérieur mal-intentionné surcharge le système de demandes jusqu'à ce que celui-ci cesse de répondre sous la charge. Ce ne sont pas les attaques les plus fréquentes, mais elles sont en hausse sur les hébergeurs de Cloud. Ce sont un exemple d'attaque sur les firewalls.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-line-chart"></i>
-        <h4>Firewalls</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
+        <h4>Failles de firewalls</h4>
+        <p>Les firewalls d'un système ont pour rôle de réguler les demandes arrivant sur la machine, et doivent donc pouvoir détecter celles qui tentent d'outrepasser ce contrôle en scannant tous les ports, envoyant des requêtes erronnées en espérant qu'elles soient reconstituées, tentent de se faire passer pour des requêtes intérieures au domaine du firewalls, ou surcharger la machine (DoS), entre autres.</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-line-chart"></i>
         <h4>Système</h4>
