--- a/index.html
+++ b/index.html
@@ -131,30 +131,30 @@
     </div>
     <div class="space"></div>
     <div class="row">
-      <div class="col-md-3 col-sm-6 col-lg-5 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Usurpation d'identifiants & d'accès</h4>
         <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler.</p>
         <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-5 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Interfaces et API</h4>
         <p>Les interfaces utilisateurs et API du Cloud consituent la seule partie applicative accessible depuis des adresses IP extérieures et seront donc particulitèrement visées par les attaques sur le Cloud.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-5 service"> <i class="fa fa-gears"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-gears"></i>
         <h4>Endpoints</h4>
         <p>De même, il faut sécuriser tous les points d'accès au Cloud de manière à ce qu'aucun individu extérieur ne puisse y accéder, par exemple en demandant l'utilisation d'un VPN.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-5 service"> <i class="fa fa-rocket"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-rocket"></i>
         <h4>Denial-of-Service</h4>
         <p>Ces attaques arrivent lorsqu'un agent extérieur mal-intentionné surcharge le système de demandes jusqu'à ce que celui-ci cesse de répondre sous la charge. Ce ne sont pas les attaques les plus fréquentes, mais elles sont en hausse sur les hébergeurs de Cloud. Ce sont un exemple d'attaque sur les firewalls.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-5 service"> <i class="fa fa-line-chart"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-line-chart"></i>
         <h4>Failles de firewalls</h4>
         <p>Les firewalls d'un système ont pour rôle de réguler les demandes arrivant sur la machine, et doivent donc pouvoir détecter celles qui tentent d'outrepasser ce contrôle en scannant tous les ports, envoyant des requêtes erronnées en espérant qu'elles soient reconstituées, tentent de se faire passer pour des requêtes intérieures au domaine du firewalls, ou surcharger la machine (DoS), entre autres.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-5 service"> <i class="fa fa-line-chart"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-line-chart"></i>
         <h4>Système</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
+        <p>Les attaques sur le système correspondent à l'exploitation de bugs dans les programmes qu'ils utilisent : kernels, libraries et outils d'exploitation. Avec le Cloud, les systèmes d'utilisateurs distincts peuvent être mis à proximité ce qui renforce cette vulnérabilité.</p>
       </div>
     </div>
 
