suppression de données

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
         <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+        <h4>Perte de données</h4>
+        <p>Un accident peut entraîner la suppression des données stockées sur le Cloud, en entraînant une perte si le backup n'est pas suffisant. De même, si les données sont cryptées pour être stockées sur le Cloud, et que l'utilisateur perd sa clé, les données seront perdues.</p>
+      </div>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Interfaces et API</h4>
         <p>Les interfaces utilisateurs et API du Cloud consituent la seule partie applicative accessible depuis des adresses IP extérieures et seront donc particulitèrement visées par les attaques sur le Cloud.</p>
       </div>
