--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
         <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+        <h4>Vol de données</h4>
+        <p>Qui met ses données sur le Cloud n'est pas à l'abris d'une attaque donnant accès aux données personnelles qui y sont stockées.</p>
+      </div>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Perte de données</h4>
         <p>Un accident peut entraîner la suppression des données stockées sur le Cloud, en entraînant une perte si le backup n'est pas suffisant. De même, si les données sont cryptées pour être stockées sur le Cloud, et que l'utilisateur perd sa clé, les données seront perdues.</p>
       </div>
