--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Accueil</a></li>
         <li><a href="#intro-section" class="page-scroll">Introduction</a></li>
-        <li><a href="#works-section" class="page-scroll">Vulnérabilités</a></li>
+        <li><a href="#services-section" class="page-scroll">Stratégies</a></li>
         <li><a href="#gazelle-section" class="page-scroll">GAZELLE</a></li>
         <li><a href="#about-section" class="page-scroll">à propos</a></li>
         <li><a href="#team-section" class="page-scroll">Références</a></li>
@@ -172,6 +172,19 @@
 
   </div>
 </div>
+
+<!-- Section des solutions -->
+<div id="services-section">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>Stratégies pour améliorer la sécurité</h2>
+      <hr>
+      <div class="clearfix"></div>
+      <p>Pour améliorer le niveau de sécurité d'une application Cloud, en outre, on peut adopter les stratégies présentées ci-après.</p>
+    </div>
+  </div>
+</div>
+
 <!-- Portfolio Section -->
 <div id="works-section">
   <div class="container"> <!-- Container -->
