--- a/index.html
+++ b/index.html
@@ -180,7 +180,22 @@
       <h2>Stratégies pour améliorer la sécurité</h2>
       <hr>
       <div class="clearfix"></div>
-      <p>Pour améliorer le niveau de sécurité d'une application Cloud, en outre, on peut adopter les stratégies présentées ci-après.</p>
+      <p>Pour améliorer le niveau de sécurité d'une application Cloud, en outre, après des mesures plus évidentes de mise enplace de sécurisation des points d'accès ou de privatisation du Cloud, on peut adopter les stratégies présentées ci-après.</p>
+    </div>
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+        <h4>Multi-Cloud</h4>
+        <p>Une solution très simple pour améliorer la sécurité d'une implémentation Cloud, outre la privatisation du serveur de stockage, sera d'adopter une répartition chez plusieurs hébergeurs pour ne pas exposer toutes ses données en même temps et de la même manière. </p>
+      </div>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+        <h4>Chiffrement</h4>
+        <p>Ensuite, une autre solution de sécurisation évidente est le cryptage des données stockées sur nuage. Même si le cryptage ne suffit pas pouvant être décrypté avec des forces de calcul suffisamment élevée, il ajoute une difficulté supplémentaire à la lecture d'informations confidentielles.</p>
+      </div>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+        <h4>Séparation des données de leur traitement</h4>
+        <p>Dans le cas d'une utilisation du Cloud à des fins de machine learning par réseaux de neurones, on peut séparer le processus d'apprentissage des données et donc ne pas les dévoiler en les gardant sur un serveur entièrement contrôlé. Le protocole Gazelle qui met ce schéma en place pour des réseaux RNN (réseaux de neurones récurrents) est expliqué plus en détail ci-après.</p>
+      </div>
     </div>
   </div>
 </div>
