--- a/index.html
+++ b/index.html
@@ -200,6 +200,18 @@
   </div>
 </div>
 
+<!-- Gazelle section -->
+<div id="gazelle-section">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>Protocole Gazelle : sécurisation d'une application RNN dans le Cloud</h2>
+      <hr>
+      <div class="clearfix"></div>
+      <p>Le protocole Gazelle, présenté dans une publication d'étudiants du MIT en août 2018, propose une solution de sécurisation de l'apprentissage de réseaux de neurones récurrents dans le Cloud, de manière à ne pas transférer les données tout en conservant des temps de traitement acceptables.</p>
+    </div>
+  </div>
+</div>
+
 <!-- Portfolio Section -->
 <div id="works-section">
   <div class="container"> <!-- Container -->
