--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       </div>
     </div>
     <div class="space"></div>
+    <div class="space"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Usurpation d'identifiants & d'accès</h4>
@@ -177,6 +178,7 @@
 <div id="services-section">
   <div class="container">
     <div class="section-title text-center center">
+      <div class="space"></div>
       <h2>Stratégies pour améliorer la sécurité</h2>
       <hr>
       <div class="clearfix"></div>
@@ -190,7 +192,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Chiffrement</h4>
-        <p>Ensuite, une autre solution de sécurisation évidente est le cryptage des données stockées sur nuage. Même si le cryptage ne suffit pas pouvant être décrypté avec des forces de calcul suffisamment élevée, il ajoute une difficulté supplémentaire à la lecture d'informations confidentielles.</p>
+        <p>Ensuite, une autre solution de sécurisation évidente est le cryptage des données stockées sur nuage. Même si le cryptage ne suffit pas pouvant être décrypté avec des forces de calcul suffisamment élevée, il ajoute une difficulté supplémentaire à la lecture d'informations confidentielles. Différents types de chiffrements sont présentés dans la section suivante.</p>
       </div>
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Séparation des données de leur traitement</h4>
@@ -200,15 +202,46 @@
   </div>
 </div>
 
+<!-- encryption section -->
+<div id="encryption-section">
+  <div class="container">
+    <div class="section-title text-center center">
+      <div class="space"></div>
+      <h2>Chiffrements</h2>
+      <hr>
+      <div class="clearfix"></div>
+      <p>De nombreux types de chiffrement peuvent être utilisés dans une application Cloud pour apporter une amélioration par rapport aux cryptages les plus basiques. Ici, l'on détaillera les cas du chiffrement par attributs, du chiffrement homomorphique et du chiffrement recherchable, qui permettront ensuite de mieux comprendre le protocole Gazelle.</p>
+    </div>
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="about-text">
+          <h4>Chiffrement par attributs</h4>
+          <p>Dans le processus de chiffrement, on peut prendre en compte des informations propres à l'utilisateur de manière à empècher l'usurpation ; ainsi, on peut se servir de sa localisation ou son addresse IP, ou de données encore plus spécifiques allant jusqu'à un identifiant utilisateur unique utilisé à la base du chiffrement.</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-4 web">
+          <div class="hover-bg">
+            <a href="img/chiffrement/chiffrement_par_attributs.png" rel="prettyPhoto">
+              <img src="img/chiffrement/chiffrement_par_attributs.png" class="img-responsive">
+            </a>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Gazelle section -->
 <div id="gazelle-section">
   <div class="container">
     <div class="section-title text-center center">
+      <div class="space"></div>
       <h2>Protocole Gazelle : sécurisation d'une application RNN dans le Cloud</h2>
       <hr>
       <div class="clearfix"></div>
       <p>Le protocole Gazelle, présenté dans une publication d'étudiants du MIT en août 2018, propose une solution de sécurisation de l'apprentissage de réseaux de neurones récurrents dans le Cloud, de manière à ne pas transférer les données tout en conservant des temps de traitement acceptables.</p>
     </div>
+
   </div>
 </div>
 
