--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li><a href="#home" class="page-scroll">Accueil</a></li>
         <li><a href="#intro-section" class="page-scroll">Introduction</a></li>
         <li><a href="#services-section" class="page-scroll">Stratégies</a></li>
+        <li><a href="#encryption-section" class="page-scroll">Chiffrements</a></li>
         <li><a href="#gazelle-section" class="page-scroll">GAZELLE</a></li>
         <li><a href="#about-section" class="page-scroll">à propos</a></li>
         <li><a href="#team-section" class="page-scroll">Références</a></li>
