--- a/index.html
+++ b/index.html
@@ -229,6 +229,24 @@
           </div>
       </div>
     </div>
+
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-sm-6 col-md-6 col-lg-4 web">
+          <div class="hover-bg">
+            <a href="img/chiffrement/chiffrement_homomorphique.png" rel="prettyPhoto">
+              <img src="img/chiffrement/chiffrement_homomorphique.png" class="img-responsive">
+            </a>
+          </div>
+      </div>
+      <div class="col-md-8">
+        <div class="about-text">
+          <h4>Chiffrement phomomorphique</h4>
+          <p>Le chiffrement homomorphique, utilisé dans le protocole Gazelle présenté dans la section suivante, est essentiel pour tous les protocoles effectuant des opérations sur les données chiffrées. Il s'agit d'un type de chiffrement supportant, lorsque des opérations sont effectuées sur les information chiffrées, que le déchiffrage laisse apparaître ces mêmes opérations effectuées sur les données d'origine.</p>
+          </div>
+      </div>
+    </div>
+    <div class="space"></div>
   </div>
 </div>
 
