--- a/index.html
+++ b/index.html
@@ -241,8 +241,25 @@
       </div>
       <div class="col-md-8">
         <div class="about-text">
-          <h4>Chiffrement phomomorphique</h4>
+          <h4>Chiffrement homomorphique</h4>
           <p>Le chiffrement homomorphique, utilisé dans le protocole Gazelle présenté dans la section suivante, est essentiel pour tous les protocoles effectuant des opérations sur les données chiffrées. Il s'agit d'un type de chiffrement supportant, lorsque des opérations sont effectuées sur les information chiffrées, que le déchiffrage laisse apparaître ces mêmes opérations effectuées sur les données d'origine.</p>
+          </div>
+      </div>
+    </div>
+
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="about-text">
+          <h4>Chiffrement recherchable</h4>
+          <p>Le chiffrement recherchable (ou <i>searchable encryption</i> en anglais), correspond à une transposition similaire à celle du chifrement homomorphique, mais où l'on peut effectuer des recherche dans l'espace des données transcrites sans en connaître le contenu, mais en utilisant le fait que des données similaires aient également des formes cryptées similaires.</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-4 web">
+          <div class="hover-bg">
+            <a href="img/chiffrement/chiffrement_recherchable.png" rel="prettyPhoto">
+              <img src="img/chiffrement/chiffrement_recherchable.png" class="img-responsive">
+            </a>
           </div>
       </div>
     </div>
