--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
     </div>
     <div class="space"></div>
     <div class="space"></div>
+  </div>
+</div>
+<div id="end-of-intro">
+  <div class="container">
+    <div class="space"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
         <h4>Usurpation d'identifiants & d'accès</h4>
@@ -171,7 +176,6 @@
         <p>Le risque d'une attaque ou d'un vol de données de la part d'un agent interne au groupe des utilisateur ou provenant de l'hôte n'est pas à négliger, d'autant plus qu'il est difficile de s'en prémunir si ce n'est par une gestion stricte des accès en interne. Cependant, l'utilisateur du Cloud n'a pas la main sur l'organisation humaine côté hôte.</p>
       </div>
     </div>
-    <div class="space"></div>
   </div>
 </div>
 
