--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="space"></div>
   </div>
 </div>
-<div id="end-of-intro">
+<div id="end-of-intro-section">
   <div class="container">
     <div class="space"></div>
     <div class="row">
