--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
         <p>Dans le cas d'une utilisation du Cloud à des fins de machine learning par réseaux de neurones, on peut séparer le processus d'apprentissage des données et donc ne pas les dévoiler en les gardant sur un serveur entièrement contrôlé. Le protocole Gazelle qui met ce schéma en place pour des réseaux RNN (réseaux de neurones récurrents) est expliqué plus en détail ci-après.</p>
       </div>
     </div>
+    <div class="space"></div>
   </div>
 </div>
 
@@ -280,6 +281,22 @@
       <hr>
       <div class="clearfix"></div>
       <p>Le protocole Gazelle, présenté dans une publication d'étudiants du MIT en août 2018, propose une solution de sécurisation de l'apprentissage de réseaux de neurones récurrents dans le Cloud, de manière à ne pas transférer les données tout en conservant des temps de traitement acceptables.</p>
+    </div>
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="about-text">
+          <h4>Réseau de neurones récurrent (RNN)</h4>
+          <p>Un réseau de neurones récurrent effectue successivement des opérations linéaires de convolution puis des opérations non linéaires sur la partie avec les couches de neurones à proprement parler, comme le montre l'image ci-contre.</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-8 web">
+          <div class="hover-bg">
+            <a href="img/gazelle/rnn.png" rel="prettyPhoto">
+              <img src="img/gazelle/rnn.png" class="img-responsive">
+            </a>
+          </div>
+      </div>
     </div>
 
   </div>
