--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
           </div>
       </div>
     </div>
+    <div class="space"></div>
+
+    <div class="subsection-title text-center center">
+      <h2>Utilisation du chiffrement homomorphique</h2>
+    </div>
 
   </div>
 </div>
