--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         <div class="about-text">
           <h4>Chiffrement homomorphique</h4>
           <p>Le chiffrement homomorphique, utilisé dans le protocole Gazelle présenté dans la section suivante, est essentiel pour tous les protocoles effectuant des opérations sur les données chiffrées. Il s'agit d'un type de chiffrement supportant, lorsque des opérations sont effectuées sur les information chiffrées, que le déchiffrage laisse apparaître ces mêmes opérations effectuées sur les données d'origine.</p>
+          <p>On peut définir un chiffrement homomorphique par exemple à partir de moduli polynômiaux, en utilisantn une famille de polynômes définis modulo un coefficient supérieur plus un, avec des coefficients entiers prenant des valeurs elles aussi définies modulo un entier. L'article <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">suivant</a> de <i>n1 analytics</i> explique cela de manière progressive et détaillée.</p>
           </div>
       </div>
     </div>
